# OpenAttention

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  alembic.ini  cli.py  interests.yaml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: check-feeds.md
alembic/: env.py
alembic/versions/: 001_baseline.py  002_phase2_schema.py
src/: config.py  daemon.py
src/api/: auth.py  main.py
src/api/routers/: articles.py  feeds.py  scores.py
src/api/static/: index.html
src/db/: models.py  session.py
src/export/: notion.py
src/feeds/: fetcher.py  manager.py
src/interests/: manager.py
src/scoring/: preparer.py  ranker.py
tests/: test_alembic_migrations.py  test_auth.py  test_daemon.py  test_foryou.py  test_ranker.py  test_rescore.py  test_retention.py
