[project]
name = "ai-rss"
version = "0.1.0"
description = "AI-driven RSS content system orchestrated by Claude Code"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "click>=8.1",
    "pyyaml>=6.0",
    "notion-client>=2.0",
    "alembic>=1.13",
]

[project.scripts]
rss = "cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
